# utf8proc

./: .gitignore  CMakeLists.txt  utf8proc.c  utf8proc.h
cmake/: GetVersionFromMacro.cmake
test/: graphemetest.c
